deploy/homebox/homebox-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homebox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  labels:
    app: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/hay-kot/homebox:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7745
              name: http
          resources:
            limits:
              memory: "256Mi"
              cpu: "512m"
            requests:
              memory: "128Mi"
              cpu: "128m"
          volumeMounts:
            - name: homebox-volume
              mountPath: /data
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
      volumes:
        - name: homebox-volume
          hostPath:
            # directory location on host
            path: /data/homebox
            # this field is optional
            type: Directory
---
kind: Service
apiVersion: v1
metadata:
  name: homebox
  namespace: homebox
spec:
  selector:
    app: homebox
  ports:
  - name: homebox
    protocol: TCP
    port: 7745
    targetPort: 7745
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homebox-ingressroute
  namespace: homebox
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`homebox.chromebox.lan`) || Host(`homebox.km-neer.net`)
    kind: Rule
    services:
    - name: homebox
      port: 7745
